# HPC

./: .gitignore  Makefile  matrices.c  parallelMatrix.c
cuda/: CMakeCache.txt  CMakeLists.txt  Makefile  Report.md  multimagen.cpp  multimagen.cu
cuda/CudaSumaVectores/: sumVector.cpp  sumVector_cuda
cuda/convolution/: Makefile  bikes.jpgSMTimes  bikes.jpgTimes  constConvolution.cu  constConvolution.out  convolution.cu  convolution.out  opencvConcolutionCuda.cu  opencvCudaConvolution.cu  opencvCudaConvolution.out  sharedMconvolution.cu  sharedMconvolution.out  smconvolution.cu  smconvolution.out
cuda/grayScale/: .Makefile.swp  Makefile  crash.jpgTimes  grayScale.cu  landscape.jpgTimes  moon.jpgTimes  natalie.jpgTimes
cuda/imagePer2/: multimagen.cu
cuda/images/: bikes.jpgCMTimes  bikes.jpgSCMTimes  bikes.jpgSharedMTimes  bikes.jpgTimes  bikes.jpgnormalTimes  bikes.jpgopencvCudaTimes  crash.jpgCMTimes  crash.jpgSCMTimes  crash.jpgSMTimes  crash.jpgSharedMTimes  crash.jpgTimes  crash.jpgnormalTimes  crash.jpgopencvCudaTimes  grayRock.jpgCMTimes  grayRock.jpgSCMTimes  grayRock.jpgSMTimes  grayRock.jpgSharedMTimes  grayRock.jpgTimes  grayRock.jpgnormalTimes  grayRock.jpgopencvCudaTimes  landscape.jpgCMTimes  landscape.jpgSCMTimes  landscape.jpgSMTimes  landscape.jpgSharedMTimes  landscape.jpgTimes  landscape.jpgnormalTimes  landscape.jpgopencvCudaTimes  moon.jpgCMTimes  moon.jpgSCMTimes  moon.jpgSMTimes  moon.jpgSharedMTimes  moon.jpgTimes  moon.jpgnormalTimes  moon.jpgopencvCudaTimes  natalie.jpgSCMTimes  natalie.jpgSMTimes  natalie.jpgSharedMTimes  tigre.jpgCMTimes  (+7 more)
(+46 files in other folders)
